--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
+    "react-use": "^17.4.0",
     "sass": "^1.63.6",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4"
