--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
     "react-use": "^17.4.0",
+    "reactstrap": "^9.2.0",
     "sass": "^1.63.6",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4"
